# state-diff

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  cleanup.sh  code_structure.md  debug.hpp  threaded_cmp.hpp
.github/workflows/: ci.yml
accuracy_test/: Makefile  run_test.cpp
benchmark/: CMakeLists.txt  create.cpp  create_timings.csv  run.sh
cmake/: Findliburing.cmake  StateDiffConfig.cmake.in  statediffConfig.cmake.in
include/: MurmurHash3.h  boost.hpp  comp_func.hpp  compare_tree_approach.hpp  cs_scheduler.hpp  cuda_timer.hpp  data_generation.hpp  data_loader.hpp  debug.hpp  direct_comparer.hpp  direct_io.hpp  fuzzy_hash.hpp  io_uring_stream.hpp  kokkos_merkle_tree.hpp  kokkos_murmur3.hpp  kokkos_queue.hpp  kokkos_vector.hpp  logger_state.hpp  merkle_tree.hpp  mmap_stream.hpp  modified_kokkos_bitset.hpp  rounding_hash.hpp  state_diff.hpp  statediff.hpp  truncating_hash.hpp  utils.hpp
scripts/: testscript.sh
src/: CMakeLists.txt  compare_tree_approach.cpp  data_generation.cpp  debug.cpp  logger_state.cpp  repro_test.cpp
src/cli/: CMakeLists.txt  statediff_cli.cpp
src/common/: compare_utils.hpp  debug.hpp  direct_io.hpp  io_utils.hpp  merkle_tree.cpp  merkle_tree.hpp  segment.hpp  statediff_bitset.hpp  statediff_queue.hpp  statediff_vector.hpp
src/lib/: CMakeLists.txt  cuda_timer.hpp  merkle_tree.cpp  statediff.cpp
src/loader/: CMakeLists.txt  base_cache.hpp  data_loader.cpp  data_loader.hpp  device_cache.cpp  device_cache.hpp  host_cache.cpp  host_cache.hpp  metadata_queue.hpp  storage.cpp  storage.hpp
src/loader/test/: CMakeLists.txt  benchmark.cpp  test_data_loader.cpp  test_loader.cpp  test_loader.sh  test_single_loader.cpp  test_two_loader.cpp  test_two_loaders.cpp
src/readers/: CMakeLists.txt  adios_reader.cpp  adios_reader.hpp  io_reader.hpp  io_uring_stream.cpp  io_uring_stream.hpp  liburing_reader.cpp  liburing_reader.hpp  mmap_reader.cpp  mmap_reader.hpp  posix_reader.cpp  posix_reader.hpp  reader_factory.hpp
src/readers/test/: CMakeLists.txt  reader_test.cpp
src/tools/: CMakeLists.txt  data_generation.cpp  data_generation.hpp  statedif-extract-hacc.cpp  statediff-extract-hacc.cpp
test/: CMakeLists.txt  benchmark_tree_creation.cpp  benchmark_tree_creation.sh  benchmark_tree_results.csv  test_case_create_tree.cpp  test_compare copy.cpp  test_compare.cpp  test_compare_offline.cpp  test_compare_online.cpp  test_compare_tree_adios_offline.cpp  test_compare_tree_adios_offline_lts.cpp  test_compare_tree_offline.cpp  test_create_stream.cpp  test_create_tree.cpp  test_create_tree_adios.cpp  test_cs_scheduler.cpp  test_data_loader.cpp  test_loader.sh  test_serialize.cpp  test_serialize_adios.cpp
test/accuracy_test/: HOWTO  run_test.cpp
test/mytests/: test_stream  test_stream.cu
test/serial_test/: Makefile  serial_test  serial_test.cpp  serial_test_v1.cpp  serial_test_v2.cpp  test_boost.cpp  test_cereal.cpp
test/statediff/: Makefile  run_test.cpp
test/stream_create_tree/: Makefile  test_stream.cpp
test/threaded_cmp/: run_test.cpp
test/veloc/: Makefile  a.out  main.cpp  run1.cfg  run2.cfg  run_test  run_test.cpp  test.cpp
threaded_cmp/: Makefile  run_test.cpp
utilities/: split_veloc_checkpoint.cpp
